--- a/themes/motiv/layouts/default.htm
+++ b/themes/motiv/layouts/default.htm
@@ -46,7 +46,7 @@ description = "Default layout"
                     <div class="col-md-12 px-5">
                         <ul class="mb-5">
                             <li class="active"><a href="index.html"><span>Home</span></a></li>
-                            <li><a href="fashion.html"><span>Fashion</span></a></li>
+                            <li><a href="/blog"><span>Blog</span></a></li>
                             <li><a href="model.html"><span>Model</span></a></li>
                             <li><a href="travel.html"><span>Travel</span></a></li>
                             <li><a href="about.html"><span>About us</span></a></li>
