--- a/themes/motiv/layouts/default.htm
+++ b/themes/motiv/layouts/default.htm
@@ -45,12 +45,12 @@ description = "Default layout"
                 <div class="row d-flex justify-content-end">
                     <div class="col-md-12 px-5">
                         <ul class="mb-5">
-                            <li class="active"><a href="index.html"><span>Home</span></a></li>
+                            <li class="active"><a href="/"><span>Home</span></a></li>
                             <li><a href="/blog"><span>Blog</span></a></li>
-                            <li><a href="model.html"><span>Model</span></a></li>
-                            <li><a href="travel.html"><span>Travel</span></a></li>
-                            <li><a href="about.html"><span>About us</span></a></li>
-                            <li><a href="contact.html"><span>Contact</span></a></li>
+                            <!--<li><a href="model.html"><span>Model</span></a></li>-->
+                            <!--<li><a href="travel.html"><span>Travel</span></a></li>-->
+                            <!--<li><a href="about.html"><span>About us</span></a></li>-->
+                            <!--<li><a href="contact.html"><span>Contact</span></a></li>-->
                         </ul>
                     </div>
                     <div class="col px-5 copyright">
@@ -67,7 +67,7 @@ description = "Default layout"
                 <div class="row no-gutters">
                     <div class="col-md-12">
                         <div class="colorlib-navbar-brand">
-                            <a class="colorlib-logo" href="index.html">Libro</a>
+                            <a class="colorlib-logo" href="/">Motiv</a>
                         </div>
                         <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
                     </div>
