--- a/themes/motiv/layouts/default.htm
+++ b/themes/motiv/layouts/default.htm
@@ -83,7 +83,7 @@ description = "Default layout"
                         <div class="container">
                             <div class="row slider-text align-items-end" data-scrollax-parent="true">
                                 <div class="col-md-10 col-sm-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-                                    <p class="cat"><span>Fashion</span></p>
+                                    <p class="cat"><span>сұлулық</span></p>
                                     <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Popular Lifestyle with Fashion &amp; Modeling</h1>
                                 </div>
                             </div>
@@ -95,7 +95,7 @@ description = "Default layout"
                         <div class="container">
                             <div class="row slider-text align-items-end" data-scrollax-parent="true">
                                 <div class="col-md-10 col-sm-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-                                    <p class="cat"><span>Model</span></p>
+                                    <p class="cat"><span>мотивация</span></p>
                                     <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Canadian Girl make your world go round</h1>
                                 </div>
                             </div>
