--- a/themes/motiv/partials/blogposts/default.htm
+++ b/themes/motiv/partials/blogposts/default.htm
@@ -5,7 +5,7 @@
 
         {% for post in posts %}
         <div class="blog-entry ftco-animate">
-            <a href="#" class="blog-image">
+            <a href="{{ post.url }}" class="blog-image">
 
                 {% if post.featured_images.count %}
                 <img src="{{post.featured_images[0].path}}"
