--- a/plugins/indikator/news/assets/css/statistics.css
+++ b/plugins/indikator/news/assets/css/statistics.css
@@ -3,8 +3,8 @@
     -webkit-box-shadow: 3px 3px 11px 0 rgba(217, 217, 217, 1);
        -moz-box-shadow: 3px 3px 11px 0 rgba(217, 217, 217, 1);
             box-shadow: 3px 3px 11px 0 rgba(217, 217, 217, 1);
-    margin: 10px 0 20px 0;
-    padding: 5px 20px 15px 20px;
+    margin: 26px 15px;
+    padding: 0 15px 10px 15px;
 }
 
 .statboard h4 {
@@ -15,7 +15,7 @@
 
 .morris-hover {
     position: absolute;
-    z-index: 1000
+    z-index: 1000;
 }
 
 .morris-hover.morris-default-style {
@@ -26,7 +26,7 @@
     font-family: sans-serif;
     font-size: 12px;
     padding: 6px;
-    text-align:center;
+    text-align: center;
 }
 
 .morris-hover.morris-default-style .morris-hover-row-label {
