--- a/themes/motiv/partials/slider/default.htm
+++ b/themes/motiv/partials/slider/default.htm
@@ -17,8 +17,8 @@
 							<div class="col-md-12">
 								<div class="testimonials-text box" style="">								
 								
-									<h4 class="name">{{ testimonial.name }}</h4>
-									<h5 class="title">{{ testimonial.title }}</h5>
+									<!--<h4 class="name">{{ testimonial.name }}</h4>-->
+									<!--<h5 class="title">{{ testimonial.title }}</h5>-->
 									<div class="content">{{ testimonial.content|raw }}</div>
 								</div>
 							</div>
