--- a/themes/motiv/partials/slider/default.htm
+++ b/themes/motiv/partials/slider/default.htm
@@ -15,7 +15,7 @@
 							</div>				
 							{% endif %}
 							<div class="col-md-12">
-								<div class="testimonials-text box" style="">								
+								<div class="testimonials-text box" style="padding-top: 15px;">
 								
 									<!--<h4 class="name">{{ testimonial.name }}</h4>-->
 									<!--<h5 class="title">{{ testimonial.title }}</h5>-->
